# papuan-database

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
app/: __init__.py  __main__.py  cli.py
app/core/: __init__.py  config.py  errors.py  events.py  logging.py  query_history.py
app/db/: __init__.py  engine.py  session.py
app/fixtures/: __init__.py  demo.py
app/models/: __init__.py  base.py  club.py  competitions.py  people.py  security.py  training.py  trips.py
app/repositories/: __init__.py  base.py
app/services/: __init__.py  acl.py  audit.py  auth.py  entity_service.py  maintenance.py  queries.py  roles.py  sql_console.py  users.py
app/theme/: __init__.py  qss.py  tokens.py
app/ui/: __init__.py  app_controller.py  console_page.py  descriptors.py  login_window.py  main_window.py  pages.py  service_panel.py  sql_console.py  widgets.py
app/ui/admin/: __init__.py  audit_panel.py  dialogs.py  page.py  roles_panel.py  users_panel.py
app/viewmodels/: __init__.py
docs/: er-diagram.md  guideline.md  plan.md  requirements.md  screens.md  specification.md  task.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_init.py  0002_constraints_and_triggers.py  0003_seed_permissions_and_admin.py  0004_readonly_db_user.py
tests/: __init__.py  conftest.py  test_acl.py  test_audit_service.py  test_auth.py  test_descriptors.py  test_entity_service.py  test_maintenance.py  test_queries.py  test_query_history.py  test_repository.py  test_sql_console.py  test_ui_smoke.py  test_users_roles.py
(+13 files in other folders)
