[project]
name = "tourist-club"
version = "0.1.0"
description = "ИС туристического клуба — итоговый проект по курсу БД"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Dima" }]

dependencies = [
    "PySide6>=6.7",
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "qtawesome>=1.3",
    "python-dateutil>=2.9",
    "platformdirs>=4.2",
]

[project.scripts]
tourist-club = "app.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-qt>=4.4",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
